--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -394,3 +394,27 @@ button:hover {
 #menu a:hover {
     background-color: #f0f0f0; /* Change la couleur de fond au survol */
 }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tr:hover {
+    background-color: #f1f1f1;
+}
